# DiMAS

./: DOCUMENTATION.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
benchmark_logs/: benchmark_20251210_005633.json  math_chain_log.json  result.md  result_multi_agent.md
examples/: EXPERIMENT_README.md  __init__.py  agent_with_tools_example.py  basic_usage.py  benchmark_vs_langgraph.py  early_stop_example.py  gnn_routing.py  gnn_routing_experiment.py  math_chain_example.py  medical_star_topology.py  multi_agent_tools_example.py  multi_model_example.py  schema_validation_example.py  streaming_example.py  visualization_example.py  web_search_example.py
examples/experiment_output/: experiment_log.json  gnn_router_model.pt  graph_after.dot  graph_after.html  graph_after.md  graph_before.html  graph_before.md  routing_comparison.html  training_curves.html
examples/experiment_output/animation_frames/: frame_final.json
rustworkx_framework/: __init__.py
rustworkx_framework/builder/: __init__.py  graph_builder.py
rustworkx_framework/callbacks/: __init__.py  base.py  context.py  events.py  manager.py
rustworkx_framework/callbacks/handlers/: __init__.py  file.py  metrics.py  stdout.py
rustworkx_framework/config/: __init__.py  logging.py  settings.py
rustworkx_framework/core/: __init__.py  agent.py  algorithms.py  encoder.py  events.py  gnn.py  graph.py  metrics.py  schema.py  visualization.py
rustworkx_framework/examples/: agent_with_tools_example.py  basic_usage.py  benchmark_vs_langgraph.py  early_stop_example.py  gnn_routing.py  math_chain_example.py  medical_star_topology.py  multi_agent_tools_example.py  multi_model_example.py  schema_validation_example.py  streaming_example.py  visualization_example.py  web_search_example.py
rustworkx_framework/execution/: __init__.py  budget.py  errors.py  runner.py  scheduler.py  streaming.py
rustworkx_framework/tools/: __init__.py  base.py  code_interpreter.py  file_search.py  function_calling.py  llm_integration.py  shell.py  web_search.py
rustworkx_framework/utils/: __init__.py  async_utils.py  memory.py  state_storage.py
tests/: __init__.py  conftest.py  test_callbacks.py  test_encoder.py  test_graph.py  test_runner.py  test_scheduler.py  test_settings.py  test_tools.py
