[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustworkx-agent-framework"
version = "0.1.0"
description = "Dynamic graph-based multi-agent framework using rustworkx"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = [
    "agents",
    "multi-agent",
    "graph",
    "rustworkx",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "rustworkx>=0.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "torch>=2.0",
    "loguru>=0.7",
    "sentence-transformers>=2.0",
    "langgraph>=1.0.4",
    "langchain-core>=1.1.3",
    "openai>=2.11.0",
    "graphviz>=0.21",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.0",
]
pyg = [
    "torch-geometric>=2.0",
]
viz = [
    "graphviz>=0.20",
    "matplotlib>=3.7",
    "pillow>=10.0",
]
all = [
    "sentence-transformers>=2.0",
    "torch-geometric>=2.0",
    "graphviz>=0.20",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rustworkx-agent-framework"
Documentation = "https://github.com/yourusername/rustworkx-agent-framework#readme"
Repository = "https://github.com/yourusername/rustworkx-agent-framework"

[tool.hatch.build.targets.wheel]
packages = ["rustworkx_framework"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]
